--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -1,4 +1,4 @@
-<h2>About</h2>
+<h2 class="worksans">About</h2>
 
 <h3>
   We help organizations and communities redesign their relationships with digital technology.
