--- a/_includes/sections/our-values.html
+++ b/_includes/sections/our-values.html
@@ -1,4 +1,4 @@
-<h2>Our values</h2>
+<h2 class="worksans">Our values</h2>
 
 <h3>Together, we have years of experience building open source technologies and sustainable communities.</h3>
 
