--- a/_includes/sections/what-we-do.html
+++ b/_includes/sections/what-we-do.html
@@ -1,4 +1,4 @@
-<h2>What we do</h2>
+<h2 class="worksans">What we do</h2>
 
 <p>We are a team of technologists, designers, and community organizers who value working with mission-oriented organizations.</p>
 
