--- a/_includes/sections/work-with-us.html
+++ b/_includes/sections/work-with-us.html
@@ -1,5 +1,12 @@
-<h2>Work with us</h2>
+<h2 class="worksans">Work with us</h2>
 
 <h3>We would love to hear from you about new projects, partnerships, and collaborations.</h3>
+
+<dl>
+  <dt>Telephone</dt>
+  <dd><a href="tel:{{ site.phone }}">{{ site.phone }}</a></dd>
+  <dt>Email</dt>
+  <dd><a href="mailto:{{ site.email-hidden }}">{{ site.email }}</a></dd>
+</dl>
 
 <h4>Hypha is rooted in Tkaranto (Toronto), Canada.</h4>
