--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,9 @@
 <footer>
   <p>{{ site.footer }}</p>
+  <ul>
+    <li><a href="{{ site.github }}" target="_blank">GitHub</a></li>
+    <li><a href="{{ site.linkedin }}" target="_blank">LinkedIn</a></li>
+    <li><a href="{{ site.twitter }}" target="_blank">Twitter</a></li>
+    <li><a href="{{ site.handbook }}" target="_blank">Handbook</a></li>
+  </ul>
 </footer>
