--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
-<footer>
+<footer class="ph3-m ph5-ns">
   <p>{{ site.footer }}</p>
-  <ul>
+  <ul class="list pl0">
     <li><a href="{{ site.github }}" target="_blank">GitHub</a></li>
     <li><a href="{{ site.linkedin }}" target="_blank">LinkedIn</a></li>
     <li><a href="{{ site.twitter }}" target="_blank">Twitter</a></li>
