--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -1,13 +1,13 @@
-<h2 class="worksans">About</h2>
+<h2 class="f2 worksans">About</h2>
 
-<h3>
+<h3 class="measure-wide lh-copy">
   We help organizations and communities redesign their relationships with digital technology.
 </h3>
 
-<h4>
+<h4 class="measure-wide lh-copy">
   We advise on sustainable practices, build capacity within organizations, and develop custom technologies to empower friends and neighbours–in the Great Lakes region and our virtual neighbourhoods.
 </h4>
 
-<p>
+<p class="measure-wide lh-copy">
   As a non-profit worker co-operative, we strive to cultivate collective growth and meaningful livelihoods through learning and building digital technologies together.   
 </p>
