--- a/_includes/sections/what-we-do.html
+++ b/_includes/sections/what-we-do.html
@@ -1,12 +1,16 @@
-<h2 class="worksans">What we do</h2>
+<h2 class="f2 worksans">What we do</h2>
 
-<p>We are a team of technologists, designers, and community organizers who value working with mission-oriented organizations.</p>
+<div class="measure-wide">
+  <p class="lh-copy">We are a team of technologists, designers, and community organizers who value working with mission-oriented organizations.</p>
+</div>
 
-<p>Our projects range in size and duration–all the way from facilitating tailored workshops, providing digital coaching, developing web applications, or organizing multi-day events, to deploying and maintaining mesh networks.</p>
+<div class="measure-wide">
+  <p class="lh-copy">Our projects range in size and duration–all the way from facilitating tailored workshops, providing digital coaching, developing web applications, or organizing multi-day events, to deploying and maintaining mesh networks.</p>
+</div>
 
 <div>
-  <h3>Strategy & coaching</h3>
-  <ul>
+  <h3 class="f3">Strategy & coaching</h3>
+  <ul class="lh-copy">
     <li>Digital needs and maturity assessment</li>
     <li>Event and workshop facilitation</li>
     <li>Community building</li>
@@ -15,8 +19,8 @@
 </div>
 
 <div>
-  <h3>Technology design & development</h3>
-  <ul>
+  <h3 class="f3">Technology design & development</h3>
+  <ul class="lh-copy">
     <li>Web development</li>
     <li>Mobile applications</li>
     <li>Decentralized web</li>
@@ -25,8 +29,8 @@
 </div>
 
 <div>
-  <h3>Infrastructure deployment & management</h3>
-  <ul>
+  <h3 class="f3">Infrastructure deployment & management</h3>
+  <ul class="lh-copy">
     <li>Server management</li>
     <li>Continuous integration and delivery (CI/CD) processes</li>
     <li>Self-hosted services</li>
