--- a/_includes/sections.html
+++ b/_includes/sections.html
@@ -1,3 +1,3 @@
-<section class="{{ include.class }}" id="{{ include.path | replace:'.html','' }}">
+<section class="ph3-m ph5-ns {{ include.class }}" id="{{ include.path | replace:'.html','' }}">
   {%- include sections/{{ include.path }} -%}
 </section>
