--- a/_includes/sections/work-with-us.html
+++ b/_includes/sections/work-with-us.html
@@ -1,6 +1,6 @@
-<h2 class="worksans">Work with us</h2>
+<h2 class="f2 worksans">Work with us</h2>
 
-<h3>We would love to hear from you about new projects, partnerships, and collaborations.</h3>
+<h3 class="f3">We would love to hear from you about new projects, partnerships, and collaborations.</h3>
 
 <dl>
   <dt>Telephone</dt>
@@ -9,4 +9,4 @@
   <dd><a href="mailto:{{ site.email-hidden }}">{{ site.email }}</a></dd>
 </dl>
 
-<h4>Hypha is rooted in Tkaranto (Toronto), Canada.</h4>
+<h4 class="f4">Hypha is rooted in Tkaranto (Toronto), Canada.</h4>
