--- a/_includes/sections/cover.html
+++ b/_includes/sections/cover.html
@@ -1,1 +1,2 @@
-<h1 class="worksans">Hypha Worker Co-Operative</h1>
+<h1 class="worksans f2 ttu ma0 lh-solid">Hypha</h1>
+<h2 class="worksans f6 normal ttu ma0">Worker Co-Operative</h2>
