--- a/_includes/sections/what-we-do.html
+++ b/_includes/sections/what-we-do.html
@@ -10,7 +10,7 @@
 
 <div>
   <h3 class="f3">Strategy & coaching</h3>
-  <ul class="lh-copy">
+  <ul class="lh-copy list pl0">
     <li>Digital needs and maturity assessment</li>
     <li>Event and workshop facilitation</li>
     <li>Community building</li>
@@ -20,7 +20,7 @@
 
 <div>
   <h3 class="f3">Technology design & development</h3>
-  <ul class="lh-copy">
+  <ul class="lh-copy list pl0">
     <li>Web development</li>
     <li>Mobile applications</li>
     <li>Decentralized web</li>
@@ -30,7 +30,7 @@
 
 <div>
   <h3 class="f3">Infrastructure deployment & management</h3>
-  <ul class="lh-copy">
+  <ul class="lh-copy list pl0">
     <li>Server management</li>
     <li>Continuous integration and delivery (CI/CD) processes</li>
     <li>Self-hosted services</li>
