--- a/_includes/sections/work-with-us.html
+++ b/_includes/sections/work-with-us.html
@@ -2,11 +2,13 @@
 
 <h3 class="f3">We would love to hear from you about new projects, partnerships, and collaborations.</h3>
 
-<dl>
-  <dt>Telephone</dt>
-  <dd><a href="tel:{{ site.phone }}">{{ site.phone }}</a></dd>
-  <dt>Email</dt>
-  <dd><a href="mailto:{{ site.email-hidden }}">{{ site.email }}</a></dd>
+<dl class="dib mr5">
+  <dt><strong>Telephone</strong></dt>
+  <dd class="ml0"><a href="tel:{{ site.phone }}">{{ site.phone }}</a></dd>
+</dl>
+<dl class="dib mr5">
+  <dt><strong>Email</strong></dt>
+  <dd class="ml0"><a href="mailto:{{ site.email-hidden }}">{{ site.email }}</a></dd>
 </dl>
 
 <h4 class="f4">Hypha is rooted in Tkaranto (Toronto), Canada.</h4>
