--- a/_includes/sections/our-values.html
+++ b/_includes/sections/our-values.html
@@ -5,16 +5,16 @@
 <h4 class="measure-wide lh-copy">As a non-profit worker co-operative, our core values reflect our understanding of what it means to cultivate respectful, resilient, and democratic technology ecologies.</h4>
 
 <div class="measure-wide">
-  <h5>Build change that lasts</h5>
+  <h5 class="f5">Build change that lasts</h5>
   <p class="lh-copy">Disruptive growth has its costs. We believe that the culture of “move fast and break things” is untenable. Instead, we seek change that strengthens our communities and nurtures our planet. We work thoughtfully and with care toward the futures we imagine.</p>
 </div>
 
 <div class="measure-wide">
-  <h5>Embody co-operative values</h5>
+  <h5 class="f5">Embody co-operative values</h5>
   <p class="lh-copy">We serve our clients, members, neighbours, and the co-operative movement the world over. Hypha embodies the co-operative values of self-help, self-responsibility, democracy, equality, equity, and solidarity.</p>
 </div>
 
 <div class="measure-wide">
-  <h5>Provide safe harbour</h5>
+  <h5 class="f5">Provide safe harbour</h5>
   <p class="lh-copy">We acknowledge the sacred land we work on is the territory of many nations and was the subject of the Dish with One Spoon Wampum Belt Covenant, an agreement to peaceably share and care for the resources around the Great Lakes. Today it is still home to many First Nations, Inuit, and Métis peoples from across Turtle Island. We also recognize the ongoing history of oppression and marginalization in our society and workplaces. Hypha strives to be a safe harbour to all, regardless of race, class, gender identity and expression, sexual orientation, disability, physical appearance, body size, religion, or technical skill.</p>
 </div>
