--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,13 @@
-<footer class="ph3-m ph5-ns">
-  <p>{{ site.footer }}</p>
-  <ul class="list pl0">
-    <li><a href="{{ site.github }}" target="_blank">GitHub</a></li>
-    <li><a href="{{ site.linkedin }}" target="_blank">LinkedIn</a></li>
-    <li><a href="{{ site.twitter }}" target="_blank">Twitter</a></li>
-    <li><a href="{{ site.handbook }}" target="_blank">Handbook</a></li>
-  </ul>
+<footer class="ph3-m ph5-ns mw9 center mv5">
+  <div class="flex items-baseline">
+    <div class="w-50"><p class="f4">{{ site.footer }}</p></div>
+    <div class="w-50">
+      <ul class="list pl0 flex f4">
+        <li class="pr3"><a href="{{ site.github }}" class="accent" target="_blank">GitHub</a></li>
+        <li class="pr3"><a href="{{ site.linkedin }}" class="accent" target="_blank">LinkedIn</a></li>
+        <li class="pr3"><a href="{{ site.twitter }}" class="accent" target="_blank">Twitter</a></li>
+        <li class="pr3"><a href="{{ site.handbook }}" class="accent" target="_blank">Handbook</a></li>
+      </ul>
+    </div>
+  </div>
 </footer>
