--- a/_includes/sections/what-we-do.html
+++ b/_includes/sections/what-we-do.html
@@ -1,39 +1,46 @@
-<h2 class="f2 worksans">What we do</h2>
+<div class="bg-accent white pa4 contain bg-right aliased" style="background-image:url(/assets/images/scaling-2.png)">
+  <div class="w-75">
 
-<div class="measure-wide">
-  <p class="lh-copy">We are a team of technologists, designers, and community organizers who value working with mission-oriented organizations.</p>
-</div>
+    <h2 class="f-subheadline worksans ma0">What we do</h2>
 
-<div class="measure-wide">
-  <p class="lh-copy">Our projects range in size and duration–all the way from facilitating tailored workshops, providing digital coaching, developing web applications, or organizing multi-day events, to deploying and maintaining mesh networks.</p>
-</div>
+    <div class="measure-wide">
+      <p class="lh-solid f2">We are a team of technologists, designers, and community organizers who value working with mission-oriented organizations.</p>
+    </div>
 
-<div>
-  <h3 class="f3">Strategy & coaching</h3>
-  <ul class="lh-copy list pl0">
-    <li>Digital needs and maturity assessment</li>
-    <li>Event and workshop facilitation</li>
-    <li>Community building</li>
-    <li>Privacy, security, sustainability, and digital best practices</li>
-  </ul>
-</div>
+    <div class="measure-wide">
+      <p class="lh-copy">Our projects range in size and duration–all the way from facilitating tailored workshops, providing digital coaching, developing web applications, or organizing multi-day events, to deploying and maintaining mesh networks.</p>
+    </div>
 
-<div>
-  <h3 class="f3">Technology design & development</h3>
-  <ul class="lh-copy list pl0">
-    <li>Web development</li>
-    <li>Mobile applications</li>
-    <li>Decentralized web</li>
-    <li>Peer-to-peer (P2P) software</li>
-  </ul>
-</div>
+    <div class="flex bt bw2 mt4 bg-accent">
+      <div class="w-third pr4">
+        <h3 class="f3">Strategy <br>& coaching</h3>
+        <ul class="lh-copy list pl0">
+          <li>Digital needs and maturity assessment</li>
+          <li>Event and workshop facilitation</li>
+          <li>Community building</li>
+          <li>Privacy, security, sustainability, and digital best practices</li>
+        </ul>
+      </div>
 
-<div>
-  <h3 class="f3">Infrastructure deployment & management</h3>
-  <ul class="lh-copy list pl0">
-    <li>Server management</li>
-    <li>Continuous integration and delivery (CI/CD) processes</li>
-    <li>Self-hosted services</li>
-    <li>Mesh networks</li>
-  </ul>
+      <div class="w-third pr4">
+        <h3 class="f3">Technology design <br>& development</h3>
+        <ul class="lh-copy list pl0">
+          <li>Web development</li>
+          <li>Mobile applications</li>
+          <li>Decentralized web</li>
+          <li>Peer-to-peer (P2P) software</li>
+        </ul>
+      </div>
+
+      <div class="w-third pr4">
+        <h3 class="f3">Infrastructure deployment <br>& management</h3>
+        <ul class="lh-copy list pl0">
+          <li>Server management</li>
+          <li>Continuous integration and delivery (CI/CD) processes</li>
+          <li>Self-hosted services</li>
+          <li>Mesh networks</li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </div>
