--- a/_includes/sections/who-we-are.html
+++ b/_includes/sections/who-we-are.html
@@ -1,1 +1,3 @@
-<h2 class="f2 worksans">Who we are</h2>
+<div class="bg-accent white pa4">
+  <h2 class="f-subheadline worksans ma0">Who we are</h2>
+</div>
