--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
   <body class="sans-serif antialiased">
 
     <main aria-label="Content">
-      <div class="wrapper">
+      <div class="mw9 center">
         {{ content }}
       </div>
     </main>
