--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -1,13 +1,24 @@
-<h2 class="f2 worksans">About</h2>
 
-<h3 class="measure-wide lh-copy">
-  We help organizations and communities redesign their relationships with digital technology.
-</h3>
+<div class="flex items-center mv2">
+  <h3 class="measure-wide f-subheadline measure-narrow lh-solid accent normal worksans">
+    We help organizations and communities redesign their relationships with digital technology.
+  </h3>
+</div>
 
-<h4 class="measure-wide lh-copy">
-  We advise on sustainable practices, build capacity within organizations, and develop custom technologies to empower friends and neighbours–in the Great Lakes region and our virtual neighbourhoods.
-</h4>
+<div class="flex items-center contain bg-left aliased" style="background-image:url(/assets/images/scaling-3.png)">
+  <div class="w-50 pr4">
+    <h4 class="measure-wide mb0 accent normal f2 lh-solid">
+      We advise on sustainable practices, build capacity within organizations, and develop custom technologies to empower friends and neighbours–in the Great Lakes region and our virtual neighbourhoods.
+    </h4>
 
-<p class="measure-wide lh-copy">
-  As a non-profit worker co-operative, we strive to cultivate collective growth and meaningful livelihoods through learning and building digital technologies together.   
-</p>
+    <p class="measure-wide f3 lh-copy gray">
+      As a non-profit worker co-operative, we strive to cultivate collective growth and meaningful livelihoods through learning and building digital technologies together.   
+    </p>
+  </div>
+  <div class="w-50 relative">
+    <figure class="ma0">
+      <img class="db" src="/assets/images/scaling-1.png" alt="">
+      <figcaption class="absolute bottom-2 left-1 f6 white">Photo by Caleb George on Unsplash</figcaption>
+    </figure>
+  </div>
+</div>
