--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -1,8 +1,12 @@
-
 <div class="flex items-center mv2">
-  <h3 class="measure-wide f-subheadline measure-narrow lh-solid accent normal worksans">
-    We help organizations and communities redesign their relationships with digital technology.
-  </h3>
+  <div class="w-75">
+    <h3 class="measure-wide f-subheadline measure-narrow lh-solid accent normal worksans">
+      We help organizations and communities redesign their relationships with digital technology.
+    </h3>
+  </div>
+  <div class="w-25">
+    {%- include sections/cta-covid.html -%}
+  </div>
 </div>
 
 <div class="flex items-center contain bg-left aliased" style="background-image:url(/assets/images/scaling-3.png)">
