--- a/_includes/sections/cover.html
+++ b/_includes/sections/cover.html
@@ -1,3 +1,3 @@
 <div class="flex items-baseline">
-  <h1 class="worksans f3 ttu ma0 lh-solid">Hypha</h1><h2 class="ml2 gray worksans f3 normal ma0">Worker Co-Operative</h2>
+  <h1 class="worksans f3 ttu ma0 lh-solid">Hypha</h1><h2 class="ml2 gray worksans f3 normal ma0">Worker Co-operative</h2>
 </div>
