restructure who we are and move hr accent

--- a/_includes/sections/our-values.html
+++ b/_includes/sections/our-values.html
@@ -1,4 +1,4 @@
-<div class="flex items-center bt bw2 b--accent mv4">
+<div class="flex items-center mv4">
   <div class="w-50 pr4">
     <h2 class="f-subheadline worksans accent mb1">Our values</h2>
 
