--- a/_includes/sections/who-we-are.html
+++ b/_includes/sections/who-we-are.html
@@ -1,9 +1,8 @@
-<div class="bg-accent white pa4">
-  <h2 class="f-subheadline worksans ma0">Who we are</h2>
-</div>
-
-<div class="flex items-center contain bg-left aliased" style="background-image:url(/assets/images/scaling-3.png)">
+<div class="flex items-center contain bg-left aliased bw2 bt b--accent" style="background-image:url(/assets/images/scaling-3.png)">
   <div class="w-50 pr4">
+    
+    <h2 class="f-subheadline worksans accent mb1">Who we are</h2>
+    
     <h4 class="measure-wide mb0 accent normal f2 lh-solid">
       We advise on sustainable practices, build capacity within organizations, and develop custom technologies to empower friends and neighbours–in the Great Lakes region and our virtual neighbourhoods.
     </h4>
