--- a/_includes/sections/what-we-do.html
+++ b/_includes/sections/what-we-do.html
@@ -3,18 +3,18 @@
 
     <h2 class="f-subheadline worksans ma0">What we do</h2>
 
-    <div class="measure-wide">
+    <div class="measure-wide bg-accent">
       <p class="lh-solid f2">We are a team of technologists, designers, and community organizers who value working with mission-oriented organizations.</p>
     </div>
 
-    <div class="measure-wide">
+    <div class="measure-wide bg-accent">
       <p class="lh-copy">Our projects range in size and duration–all the way from facilitating tailored workshops, providing digital coaching, developing web applications, or organizing multi-day events, to deploying and maintaining mesh networks.</p>
     </div>
 
     <div class="flex bt bw2 mt4 bg-accent">
       <div class="w-third pr4">
         <h3 class="f3">Strategy <br>& coaching</h3>
-        <ul class="lh-copy list pl0">
+        <ul class="lh-copy pl3">
           <li>Digital needs and maturity assessment</li>
           <li>Event and workshop facilitation</li>
           <li>Community building</li>
@@ -24,7 +24,7 @@
 
       <div class="w-third pr4">
         <h3 class="f3">Technology design <br>& development</h3>
-        <ul class="lh-copy list pl0">
+        <ul class="lh-copy pl3">
           <li>Web development</li>
           <li>Mobile applications</li>
           <li>Decentralized web</li>
@@ -34,7 +34,7 @@
 
       <div class="w-third pr4">
         <h3 class="f3">Infrastructure deployment <br>& management</h3>
-        <ul class="lh-copy list pl0">
+        <ul class="lh-copy pl3">
           <li>Server management</li>
           <li>Continuous integration and delivery (CI/CD) processes</li>
           <li>Self-hosted services</li>
