--- a/_includes/sections/what-we-do.html
+++ b/_includes/sections/what-we-do.html
@@ -13,7 +13,7 @@
 
     <div class="flex bt bw2 mt4 bg-accent">
       <div class="w-third pr4">
-        <h3 class="f3">Strategy <br>& coaching</h3>
+        <h3 class="f3 mb1">Strategy <br>& coaching</h3>
         <ul class="lh-copy pl3">
           <li>Digital needs and maturity assessment</li>
           <li>Event and workshop facilitation</li>
@@ -23,7 +23,7 @@
       </div>
 
       <div class="w-third pr4">
-        <h3 class="f3">Technology design <br>& development</h3>
+        <h3 class="f3 mb1">Technology design <br>& development</h3>
         <ul class="lh-copy pl3">
           <li>Web development</li>
           <li>Mobile applications</li>
@@ -33,7 +33,7 @@
       </div>
 
       <div class="w-third pr4">
-        <h3 class="f3">Infrastructure deployment <br>& management</h3>
+        <h3 class="f3 mb1">Infrastructure deployment <br>& management</h3>
         <ul class="lh-copy pl3">
           <li>Server management</li>
           <li>Continuous integration and delivery (CI/CD) processes</li>
