--- a/_includes/sections/our-values.html
+++ b/_includes/sections/our-values.html
@@ -1,6 +1,6 @@
-<div class="flex items-center mv4">
+<div class="flex mb4">
   <div class="w-50 bg-accent white pa4">
-    <h2 class="f-subheadline worksans mb1">Our values</h2>
+    <h2 class="f-subheadline worksans mb1 mt0">Our values</h2>
 
     <h3 class="measure-wide mb0 white normal f2 lh-solid">Together, we have years of experience building open source technologies and sustainable communities.</h3>
 
@@ -9,7 +9,7 @@
 
   <div class="w-50 pa4">
     <div class="measure-wide">
-      <h5 class="f4 mb0">Build change that lasts</h5>
+      <h5 class="f4 mb0 mt2">Build change that lasts</h5>
       <p class="lh-copy">Disruptive growth has its costs. We believe that the culture of “move fast and break things” is untenable. Instead, we seek change that strengthens our communities and nurtures our planet. We work thoughtfully and with care toward the futures we imagine.</p>
     </div>
 
