--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,9 @@
 <footer class="ph3-m ph5-ns mw9 center mv5">
   <div class="flex items-baseline">
-    <div class="w-50"><p class="f4">{{ site.footer }}</p></div>
+    <div class="w-50">
+      <p class="f4">{{ site.footer }}</p>
+      <p class="f5 lh-copy">This website content is licensed under a <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank" class="accent">Creative Commons Attribution-ShareAlike 4.0 International</a> license.</p>
+    </div>
     <div class="w-50">
       <ul class="list pl0 flex f4">
         <li class="pr3"><a href="{{ site.github }}" class="accent" target="_blank">GitHub</a></li>
