--- a/_includes/sections/who-we-are.html
+++ b/_includes/sections/who-we-are.html
@@ -3,16 +3,16 @@
     
     <h2 class="f-subheadline worksans accent mb1">Who we are</h2>
     
-    <h4 class="measure-wide mb0 accent normal f2 lh-solid">
+    <h4 class="mb0 w-100 accent normal f2 lh-solid relative w5" style="z-index:1;width:70vw">
       We advise on sustainable practices, build capacity within organizations, and develop custom technologies to empower friends and neighbours–in the Great Lakes region and our virtual neighbourhoods.
     </h4>
 
     <p class="measure-wide f3 lh-copy gray">
-      As a non-profit worker co-operative, we strive to cultivate collective growth and meaningful livelihoods through learning and building digital technologies together.   
+      As a non-profit worker co-operative, we strive to cultivate collective growth and meaningful livelihoods through learning and building digital technologies together.
     </p>
   </div>
   <div class="w-50 relative">
-    <figure class="ma0">
+    <figure class="ma0 pa4">
       <img class="db" src="/assets/images/scaling-1.png" alt="">
       <figcaption class="absolute bottom-2 left-2 f6 white">Photo by Caleb George on Unsplash</figcaption>
     </figure>
