--- a/_includes/sections/who-we-are.html
+++ b/_includes/sections/who-we-are.html
@@ -1,5 +1,5 @@
 <div class="flex items-center contain bg-left aliased bw2 bt b--accent" style="background-image:url(/assets/images/scaling-3.png)">
-  <div class="w-50 pr4">
+  <div class="w-50">
     
     <h2 class="f-subheadline worksans accent mb1">Who we are</h2>
     
@@ -11,8 +11,8 @@
       As a non-profit worker co-operative, we strive to cultivate collective growth and meaningful livelihoods through learning and building digital technologies together.
     </p>
   </div>
-  <div class="w-50 relative">
-    <figure class="ma0 pa4">
+  <div class="w-50">
+    <figure class="ma0 ma4 relative">
       <img class="db" src="/assets/images/scaling-1.png" alt="">
       <figcaption class="absolute bottom-2 left-2 f6 white">Photo by Caleb George on Unsplash</figcaption>
     </figure>
