--- a/_includes/sections/who-we-are.html
+++ b/_includes/sections/who-we-are.html
@@ -3,7 +3,7 @@
     
     <h2 class="f-subheadline worksans accent mb1">Who we are</h2>
     
-    <h4 class="mb0 w-100 accent normal f2 lh-solid relative w5" style="z-index:1;width:70vw">
+    <h4 class="mb0 w-100 accent normal f2 lh-solid relative w5 bg-white" style="z-index:1;width:70vw">
       We advise on sustainable practices, build capacity within organizations, and develop custom technologies to empower friends and neighbours–in the Great Lakes region and our virtual neighbourhoods.
     </h4>
 
