--- a/_includes/sections/work-with-us.html
+++ b/_includes/sections/work-with-us.html
@@ -4,11 +4,11 @@
 
 <dl class="dib mr5">
   <dt class="mb3 mt0 f4"><strong>Telephone</strong></dt>
-  <dd class="ml0"><a class="no-underline accent" href="tel:{{ site.phone }}">{{ site.phone }}</a></dd>
+  <dd class="ml0"><a class="accent link underline-hover" href="tel:{{ site.phone }}">{{ site.phone }}</a></dd>
 </dl>
 <dl class="dib mr5">
   <dt class="mb3 mt0 f4"><strong>Email</strong></dt>
-  <dd class="ml0"><a class="no-underline accent" href="mailto:{{ site.email-hidden }}">{{ site.email }}</a></dd>
+  <dd class="ml0"><a class="accent link underline-hover" href="mailto:{{ site.email-hidden }}">{{ site.email }}</a></dd>
 </dl>
 
 <h4 class="f3 normal"><span class="accent">⚑</span> Hypha is rooted in Tkaranto (Toronto), Canada.</h4>
