--- a/_includes/sections/our-values.html
+++ b/_includes/sections/our-values.html
@@ -20,7 +20,7 @@
 
     <div class="measure-wide">
       <h5 class="f4 mb0">Provide safe harbour</h5>
-      <p class="lh-copy">We acknowledge the sacred land we work on is the territory of many nations and was the subject of the Dish with One Spoon Wampum Belt Covenant, an agreement to peaceably share and care for the resources around the Great Lakes. Today it is still home to many First Nations, Inuit, and Métis peoples from across Turtle Island. We also recognize the ongoing history of oppression and marginalization in our society and workplaces. Hypha strives to be a safe harbour to all, regardless of race, class, gender identity and expression, sexual orientation, disability, physical appearance, body size, religion, or technical skill.</p>
+      <p class="lh-copy mb0">We acknowledge the sacred land we work on is the territory of many nations and was the subject of the Dish with One Spoon Wampum Belt Covenant, an agreement to peaceably share and care for the resources around the Great Lakes. Today it is still home to many First Nations, Inuit, and Métis peoples from across Turtle Island. We also recognize the ongoing history of oppression and marginalization in our society and workplaces. Hypha strives to be a safe harbour to all, regardless of race, class, gender identity and expression, sexual orientation, disability, physical appearance, body size, religion, or technical skill.</p>
     </div>
   </div>
 </div>
