--- a/_includes/sections/who-we-are.html
+++ b/_includes/sections/who-we-are.html
@@ -1,4 +1,4 @@
-<div class="flex items-center contain bg-left aliased bw2 bt b--accent" style="background-image:url(/assets/images/scaling-3.png)">
+<div class="flex items-center contain bg-left aliased bw2" style="background-image:url(/assets/images/scaling-3.png)">
   <div class="w-50">
     
     <h2 class="f-subheadline worksans accent mb1">Who we are</h2>
