--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -1,10 +1,10 @@
-<div class="flex items-center mv2">
-  <div class="w-75">
-    <h3 class="measure-wide f-subheadline measure-narrow lh-solid accent normal worksans">
+<div class="flex-l items-center mv2">
+  <div class="w-75-l">
+    <h3 class="measure-wide f2 f1-m f-subheadline-l measure-narrow lh-solid accent normal worksans">
       We help organizations and communities redesign their relationships with digital technology.
     </h3>
   </div>
-  <div class="w-25">
+  <div class="w-100 w-25-l">
     {%- include sections/cta-covid.html -%}
   </div>
 </div>
