--- a/_includes/sections/header.html
+++ b/_includes/sections/header.html
@@ -1,1 +1,1 @@
-<h1 class="worksans f3 ttu ma0 lh-solid accent">Hypha</h1><h2 class="ml2 gray worksans f3 normal ma0">Worker Co-operative</h2>
+<h1 class="worksans f4 f3-ns ttu ma0 lh-solid accent">Hypha</h1><h2 class="ml2 gray worksans f4 f3-ns normal ma0">Worker Co-operative</h2>
