--- a/_includes/sections/who-we-are.html
+++ b/_includes/sections/who-we-are.html
@@ -1,20 +1,20 @@
-<div class="flex items-center contain bg-left aliased bw2" style="background-image:url(/assets/images/scaling-3.png)">
-  <div class="w-50">
+<div class="flex-l items-center contain bg-left aliased bw2 pv4-m pv4-l" style="background-image:url(/assets/images/scaling-3.png)">
+  <div class="w-50-l">
     
-    <h2 class="f-subheadline worksans accent mb1">Who we are</h2>
+    <h2 class="f1 f-subheadline-l worksans accent mb1-l mt0-l">Who we are</h2>
     
-    <h4 class="mb0 w-100 accent normal f2 lh-solid relative w5 bg-white" style="z-index:1;width:70vw">
+    <h3 class="mb0 w-100 accent normal f3 f2-l lh-solid relative w5 bg-white z-1 vw-70-l">
       We advise on sustainable practices, build capacity within organizations, and develop custom technologies to empower friends and neighbours–in the Great Lakes region and our virtual neighbourhoods.
-    </h4>
+    </h3>
 
-    <p class="measure-wide f3 lh-copy gray">
+    <p class="measure-wide f4 f3-l lh-copy dark-gray">
       As a non-profit worker co-operative, we strive to cultivate collective growth and meaningful livelihoods through learning and building digital technologies together.
     </p>
   </div>
-  <div class="w-50">
+  <div class="w-50-l">
     <figure class="ma0 ma4 relative">
       <img class="db" src="/assets/images/scaling-1.png" alt="">
-      <figcaption class="absolute bottom-2 left-2 f6 white">Photo by Caleb George on Unsplash</figcaption>
+      <figcaption class="absolute bottom-2-l bottom-1 left-1 left-2-l f6-l f7 white">Photo by Caleb George on Unsplash</figcaption>
     </figure>
   </div>
 </div>
