--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
       {{ content }}
     </main>
 
-    {%- include sections.html tag="footer" path="footer.html" class="ph3-m ph5-ns mw9 center mv5" -%}
+    {%- include sections.html tag="footer" path="footer.html" class="mw9 center mv5" -%}
 
   </body>
 
