--- a/_includes/sections.html
+++ b/_includes/sections.html
@@ -1,3 +1,3 @@
-<{{ include.tag | default: 'section' }} class="ph3-m ph5-ns {{ include.class }}" id="{{ include.path | replace:'.html','' }}">
+<{{ include.tag | default: 'section' }} class="ph3 ph5-l {{ include.class }}" id="{{ include.path | replace:'.html','' }}">
   {%- include sections/{{ include.path }} -%}
 </{{ include.tag | default: 'section' }}>
