--- a/_includes/sections/footer.html
+++ b/_includes/sections/footer.html
@@ -1,10 +1,10 @@
-<div class="flex items-baseline">
-  <div class="w-50">
-    <p class="f4">{{ site.footer }}</p>
-    <p class="f5 lh-copy">This website content is licensed under a <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank" class="accent link underline-hover" rel="noopener">Creative Commons Attribution-ShareAlike 4.0 International</a> license.</p>
+<div class="flex-l items-baseline">
+  <div class="w-100 w-50-l">
+    <p class="f3 f4-l lh-copy">{{ site.footer }}</p>
+    <p class="f6 f5-l lh-copy">This website content is licensed under a <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank" class="accent link underline-hover" rel="noopener">Creative Commons Attribution-ShareAlike 4.0 International</a> license.</p>
   </div>
-  <div class="w-50">
-    <ul class="list pl0 flex f4">
+  <div class="w-100 w-50-l">
+    <ul class="list pl0 flex flex-wrap f5 f4-l">
       <li class="pr3"><a href="{{ site.github }}" class="accent link underline-hover" target="_blank" rel="noopener">GitHub</a></li>
       <li class="pr3"><a href="{{ site.linkedin }}" class="accent link underline-hover" target="_blank" rel="noopener">LinkedIn</a></li>
       <li class="pr3"><a href="{{ site.twitter }}" class="accent link underline-hover" target="_blank" rel="noopener">Twitter</a></li>
