--- a/_includes/sections/what-we-do.html
+++ b/_includes/sections/what-we-do.html
@@ -1,18 +1,18 @@
-<div class="bg-accent white pa4 contain bg-right aliased" style="background-image:url(/assets/images/scaling-2.png)">
-  <div class="w-75">
+<div class="bg-accent white pa4-l pa3 contain bg-right aliased" style="background-image:url(/assets/images/scaling-2.png)">
+  <div class="w-75-l w-100-m">
 
-    <h2 class="f-subheadline worksans ma0">What we do</h2>
+    <h2 class="f1 f-subheadline-l worksans ma0">What we do</h2>
 
     <div class="measure-wide bg-accent">
-      <p class="lh-solid f2">We are a team of technologists, designers, and community organizers who value working with mission-oriented organizations.</p>
+      <p class="lh-solid f3 f2-l">We are a team of technologists, designers, and community organizers who value working with mission-oriented organizations.</p>
     </div>
 
     <div class="measure-wide bg-accent">
       <p class="lh-copy">Our projects range in size and duration–all the way from facilitating tailored workshops, providing digital coaching, developing web applications, or organizing multi-day events, to deploying and maintaining mesh networks.</p>
     </div>
 
-    <div class="flex bt bw2 mt4 bg-accent">
-      <div class="w-third pr4">
+    <div class="flex-l bt bw2 mt4 bg-accent">
+      <div class="w-third-l ph3 pr4-l">
         <h3 class="f3 mb1">Strategy <br>& coaching</h3>
         <ul class="lh-copy pl3">
           <li>Digital needs and maturity assessment</li>
@@ -22,7 +22,7 @@
         </ul>
       </div>
 
-      <div class="w-third pr4">
+      <div class="w-third-l ph3 pr4-l">
         <h3 class="f3 mb1">Technology design <br>& development</h3>
         <ul class="lh-copy pl3">
           <li>Web development</li>
@@ -32,7 +32,7 @@
         </ul>
       </div>
 
-      <div class="w-third pr4">
+      <div class="w-third-l ph3 pr4-l">
         <h3 class="f3 mb1">Infrastructure deployment <br>& management</h3>
         <ul class="lh-copy pl3">
           <li>Server management</li>
