fix proofer errors

--- a/_includes/sections/who-we-are.html
+++ b/_includes/sections/who-we-are.html
@@ -13,7 +13,7 @@
   </div>
   <div class="w-50-l">
     <figure class="ma0 ma4 relative">
-      <img class="db" src="/assets/images/scaling-1.png" alt="">
+      <img class="db" src="/assets/images/scaling-1.png" alt="Photo by Caleb George on Unsplash">
       <figcaption class="absolute bottom-2-l bottom-1 left-1 left-2-l f6-l f7 white">Photo by Caleb George on Unsplash</figcaption>
     </figure>
   </div>
