--- a/_includes/sections/our-values.html
+++ b/_includes/sections/our-values.html
@@ -15,7 +15,7 @@
 
     <div class="measure-wide">
       <h5 class="f4 mb0">Embody co-operative values</h5>
-      <p class="lh-copy">We serve our clients, members, neighbours, and the co-operative movement the world over. Hypha embodies the co-operative values of <strong>self-help, self-responsibility, dstrongocracy, equality, equity,</strong> and <strong>solidarity.</strong></p>
+      <p class="lh-copy">We serve our clients, members, neighbours, and the co-operative movement the world over. Hypha embodies the co-operative values of <strong>self-help, self-responsibility, democracy, equality, equity,</strong> and <strong>solidarity.</strong></p>
     </div>
 
     <div class="measure-wide">
