fix typo in Tkaronto

--- a/_includes/sections/work-with-us.html
+++ b/_includes/sections/work-with-us.html
@@ -11,4 +11,4 @@
   <dd class="ml0"><a class="accent link underline-hover" href="mailto:{{ site.email-hidden }}">{{ site.email }}</a></dd>
 </dl>
 
-<h4 class="f4 f3-l normal"><span class="accent">⚑</span> Hypha is rooted in Tkaranto (Toronto), Canada.</h4>
+<h4 class="f4 f3-l normal"><span class="accent">⚑</span> Hypha is rooted in Tkaronto (Toronto), Canada.</h4>
