remove repeated clause

--- a/_includes/sections/our-values.html
+++ b/_includes/sections/our-values.html
@@ -4,7 +4,7 @@
 
     <h3 class="measure-wide mb0 white normal f3 f2-l lh-solid">Together, we have years of experience building open source technologies and sustainable communities.</h3>
 
-    <p class="measure-wide f4 f3-l lh-copy white">As a non-profit worker co-operative, our core values reflect our understanding of what it means to cultivate respectful, resilient, and democratic technology ecologies.</p>
+    <p class="measure-wide f4 f3-l lh-copy white">Our core values reflect our understanding of what it means to cultivate respectful, resilient, and democratic technology ecologies.</p>
   </div>
 
   <div class="w-50-l pa3 pa4-l">
