adding email to header

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 
   <body class="sans-serif antialiased">
 
-    {%- include sections.html tag="header" path="header.html" class="pt4 flex items-baseline mw9 center" -%}
+    {%- include sections.html tag="header" path="header.html" class="pt4 flex items-baseline mw9 center justify-between" -%}
 
     <main class="mw9 center">
       {{ content }}
