Add link to data policies

--- a/_includes/sections/footer.html
+++ b/_includes/sections/footer.html
@@ -2,6 +2,7 @@
   <div class="w-100 w-50-l">
     <p class="f3 f4-l lh-copy">{{ site.footer }}</p>
     <p class="f6 f5-l lh-copy">This website content is licensed under a <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank" class="accent link underline-hover" rel="noopener">Creative Commons Attribution-ShareAlike 4.0 International</a> license.</p>
+    <p class="f6 f5-l lh-copy">For our data and privacy policies, please refer to <a href="https://handbook.hypha.coop/working-open.html" target="_blank" class="accent link underline-hover" rel="noopener">How We Use Data</a> and <a href="https://handbook.hypha.coop/data.html" target="_blank" class="accent link underline-hover" rel="noopener">Working Open</a> statements in our handbook.</p>
   </div>
   <div class="w-100 w-50-l">
     <ul class="list pl0 flex flex-wrap f5 f4-l">
