Added some constrast to the text of green pixels in background (#15)
* Added some constrast to the text of green pixels in background.

* Use existing bg-white class.

--- a/_includes/sections/who-we-are.html
+++ b/_includes/sections/who-we-are.html
@@ -7,7 +7,7 @@
       We advise on sustainable practices, build capacity within organizations, and develop custom technologies to empower friends and neighbours–in the Great Lakes region and our virtual neighbourhoods.
     </h3>
 
-    <p class="measure-wide f4 f3-l lh-copy dark-gray">
+    <p class="measure-wide f4 f3-l lh-copy dark-gray bg-white">
       As a non-profit worker co-operative, we strive to cultivate collective growth and meaningful livelihoods through learning and building digital technologies together.
     </p>
   </div>
