--- a/_includes/sections/header.html
+++ b/_includes/sections/header.html
@@ -1,5 +1,5 @@
 <div class="flex">
-  <h1 class="worksans f4 f3-ns ttu ma0 lh-solid accent">Hypha</h1><h2 class="ml2 gray worksans f4 f3-ns normal ma0">Worker Co-operative</h2>
+  <a href="{{ "/" | relative_url }}" class="flex no-underline"><h1 class="worksans f4 f3-ns ttu ma0 lh-solid accent">Hypha</h1><h2 class="ml2 gray worksans f4 f3-ns normal ma0">Worker Co-operative</h2></a>
 </div>
 <div class="dn db-l">
   <p class="gray ma0 dib mr2 b">Email</p>
