--- a/_layouts/dripline/post.html
+++ b/_layouts/dripline/post.html
@@ -4,7 +4,7 @@ layout: default
 
 <section class="mt4 ph3 ph5-l">
   <div class="mb4">
-    <a class="f4 worksans link underline-hover accent" title="Return to Dripline" href="{% link dripline.html %}">← Dripline</a>
+    <a class="worksans link underline-hover accent" title="Return to Dripline" href="{% link dripline.html %}">← Dripline</a>
   </div>
   <header class="mb4">
     <h1 class="f1 f-subheadline-l worksans lh-solid mb3 mt0-l">{{ page.title }}</h1>
