--- a/_layouts/dripline/post.html
+++ b/_layouts/dripline/post.html
@@ -5,6 +5,10 @@ layout: default
 <section class="mt4 ph3 ph5-l">
   <div class="mb4">
     <a class="worksans link underline-hover accent" title="Return to Dripline" href="{% link dripline.html %}">← Dripline</a>
+    <p class="worksans">
+      A dripline signifies the area under the outermost branches of a tree.
+      It’s this <a href="https://permacultureprinciples.com/principles/_11/" target="_blank" class="accent link underline-hover" rel="noopener">interface</a> between worlds where interesting and productive things happen.
+    </p>
   </div>
   <header class="mb4">
     <h1 class="f1 f-subheadline-l worksans lh-solid mb3 mt0-l">{{ page.title }}</h1>
