--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,6 @@
 {%- assign meta_title = page.title | default: site.title -%}
 {%- assign meta_description = page.excerpt | default: site.description -%}
-{%- assign meta_image = page.image | default: "/assets/images/hypha-social.png" -%}
+{%- assign meta_image = page.image | default: "/assets/images/hypha-social.png" | prepend: site.url -%}
 
 <head>
   <meta charset="utf-8">
