--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,6 @@
 {%- assign meta_title = page.title | default: site.title -%}
 {%- assign meta_description = page.excerpt | default: site.description -%}
-{%- assign meta_image = page.image | default: "/assets/images/hypha-social.png" | prepend: site.url -%}
+{%- assign meta_image = page.image | default: "assets/images/hypha-social.png" -%}
 
 <head>
   <meta charset="utf-8">
@@ -13,15 +13,15 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}">
   <meta property="og:url" content="{{ site.url }}">
   <meta property="og:site_name" content="{{ meta_title | escape }}">
-  <meta property="og:image" content="{{ meta_image | relative_url }}">
+  <meta property="og:image" content="{% base %}{{ meta_image }}">
   <meta name="twitter:title" content="{{ meta_title | escape }}">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="@HyphaCoop">
   <meta name="twitter:creator" content="@HyphaCoop">
-  <meta name="twitter:image" content="{{ meta_image | relative_url }}">
+  <meta name="twitter:image" content="{% base %}{{ meta_image }}">
   <meta name="theme-color" content="#9900FC">
 
   {% feed_meta %}
 
-  <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}?{{ site.time | date: '%s%N' }}">
+  <link rel="stylesheet" href="{% base %}{{ "assets/css/main.css" }}?{{ site.time | date: '%s%N' }}">
 </head>
