Revert "Removed relative_url and absolute_url filters. Added use of base include."
This reverts commit 1c4b0fbdeae7bf079cf9549b6a6593272a7c3e31.

--- a/_includes/sections/what-we-do.html
+++ b/_includes/sections/what-we-do.html
@@ -1,4 +1,4 @@
-<div class="bg-accent white pa4-l pa3 contain bg-right aliased" style="background-image:url({% base %}{{ 'assets/images/scaling-2.png' }})">
+<div class="bg-accent white pa4-l pa3 contain bg-right aliased" style="background-image:url(/assets/images/scaling-2.png)">
   <div class="w-75-l w-100-m">
 
     <h2 class="f1 f-subheadline-l worksans ma0">What we do</h2>
