--- a/_includes/sections/who-we-are.html
+++ b/_includes/sections/who-we-are.html
@@ -1,4 +1,4 @@
-<div class="flex-l items-center contain bg-left aliased bw2 pv4-m pv4-l bt b--accent" style="background-image:url({% base %}{{ 'assets/images/scaling-3.png' }})">
+<div class="flex-l items-center contain bg-left aliased bw2 pv4-m pv4-l bt b--accent" style="background-image:url(/assets/images/scaling-3.png)">
   <div class="w-50-l">
     
     <h2 class="f1 f-subheadline-l worksans accent mb1-l mt0-l">Who we are</h2>
@@ -13,7 +13,7 @@
   </div>
   <div class="w-50-l">
     <figure class="ma0 ma4 relative">
-      <img class="db" src="{% base %}{{ 'assets/images/scaling-1.png' }}" alt="Photo by Caleb George on Unsplash">
+      <img class="db" src="/assets/images/scaling-1.png" alt="Photo by Caleb George on Unsplash">
       <figcaption class="absolute bottom-2-l bottom-1 left-1 left-2-l f6-l f7 white">Photo by Caleb George on Unsplash</figcaption>
     </figure>
   </div>
