--- a/_includes/sections/header.html
+++ b/_includes/sections/header.html
@@ -1,6 +1,6 @@
 <div class="flex worksans">
   <div class="w-100">
-    <a href="{% base %}" class="flex no-underline"><h1 class="f5 f3-ns ttu ma0 accent">Hypha</h1><h2 class="ml2 gray f5 f3-ns normal ma0">Worker Co-operative</h2></a>
+    <a href="{{ "/" | relative_url }}" class="flex no-underline"><h1 class="f5 f3-ns ttu ma0 accent">Hypha</h1><h2 class="ml2 gray f5 f3-ns normal ma0">Worker Co-operative</h2></a>
   </div>
   <nav id="menu" aria-label="Menu" class="dn flex-l flex-column flex-row-l fixed static-l bg-white w-75 items-end ph3 ph0-l right-0 top-0 bottom-0 tl-l pt4 pt0-l z-max">
     {%- include sections/navigation.html -%}
