--- a/_includes/sections/navigation.html
+++ b/_includes/sections/navigation.html
@@ -8,7 +8,7 @@
   {%- for page in pages -%}
     {% if page.menu_title %}
       <li>
-        <a class="pa3 pv0-l db link underline-hover hover-accent mid-gray {% if page.url contains current_page_slug[1] or page.url == current_page %}accent underline{% endif %}" href="{% base %}{{ page.url }}">{{ page.menu_title }}</a>
+        <a class="pa3 pv0-l db link underline-hover hover-accent mid-gray {% if page.url contains current_page_slug[1] or page.url == current_page %}accent underline{% endif %}" href="{{ page.url | relative_url }}">{{ page.menu_title }}</a>
       </li>
     {% endif %}
   {%- endfor -%}
