--- a/_layouts/dripline/post.html
+++ b/_layouts/dripline/post.html
@@ -4,7 +4,7 @@ layout: default
 
 <section class="mt4 ph3 ph5-l">
   <div class="mb4">
-    <a class="worksans link underline-hover accent" title="Return to Dripline" href="{% base %}{% link dripline.html %}">← Dripline</a>
+    <a class="worksans link underline-hover accent" title="Return to Dripline" href="{% link dripline.html %}">← Dripline</a>
     <p class="worksans">
       A dripline signifies the area under the outermost branches of a tree.
       It’s this <a href="https://permacultureprinciples.com/principles/_11/" target="_blank" class="accent link underline-hover" rel="noopener">interface</a> between worlds where interesting and productive things happen.
@@ -18,6 +18,6 @@ layout: default
     {{ content }}
   </div>
   <footer class="mt5 bt bw2 b--light-gray">
-    <p><a class="link accent underline-hover" href="{% base %}{% link dripline.html %}">← <span class="gray">Return to Dripline</span></a></p>
+    <p><a class="link accent underline-hover" href="{% link dripline.html %}">← <span class="gray">Return to Dripline</span></a></p>
   </footer>
 </section>
