Moved background-image from inline to external for dweb processing. h/t @benhylau

--- a/_includes/sections/who-we-are.html
+++ b/_includes/sections/who-we-are.html
@@ -1,4 +1,4 @@
-<div class="flex-l items-center contain bg-left aliased bw2 pv4-m pv4-l bt b--accent" style="background-image:url(/assets/images/scaling-3.png)">
+<div class="flex-l items-center contain bg-left aliased bw2 pv4-m pv4-l bt b--accent scaling-3">
   <div class="w-50-l">
     
     <h2 class="f1 f-subheadline-l worksans accent mb1-l mt0-l">Who we are</h2>
