--- a/_sass/_hypha.scss
+++ b/_sass/_hypha.scss
@@ -70,3 +70,11 @@
     display: none;
   }
 }
+
+.scaling-2 {
+  background-image: url(/assets/images/scaling-2.png);
+}
+
+.scaling-3 {
+  background-image: url(/assets/images/scaling-3.png);
+}
