--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,21 +1,27 @@
+{%- assign meta_title = page.title | default: site.title -%}
+{%- assign meta_description = page.excerpt | default: site.description -%}
+{%- assign meta_image = page.image | default: "/assets/images/hypha-social.png" | prepend: site.url -%}
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
 
-  <meta property="og:title" content="{{ site.title | escape }}">
-  <meta name="description" content="{{ site.description }}">
-  <meta property="og:description" content="{{ site.description }}">
-  <link rel="canonical" href="{{ page.url | replace:'index.html','' }}">
+  <meta property="og:title" content="{{ meta_title | escape }}">
+  <meta name="description" content="{{ meta_description }}">
+  <meta property="og:description" content="{{ site_description }}">
+  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}">
   <meta property="og:url" content="{{ site.url }}">
-  <meta property="og:site_name" content="{{ site.title | escape }}">
-  <meta property="og:image" content="{{ "/assets/images/hypha-social.png" | relative_url }}">
-  <meta name="twitter:title" content="{{ site.title | escape }}">
+  <meta property="og:site_name" content="{{ meta_title | escape }}">
+  <meta property="og:image" content="{{ meta_image | relative_url }}">
+  <meta name="twitter:title" content="{{ meta_title | escape }}">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="@HyphaCoop">
   <meta name="twitter:creator" content="@HyphaCoop">
-  <meta name="twitter:image" content="{{ "/assets/images/hypha-social.png" | relative_url }}">
+  <meta name="twitter:image" content="{{ meta_image | relative_url }}">
   <meta name="theme-color" content="#9900FC">
+
+  {% feed_meta %}
 
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}?{{ site.time | date: '%s%N' }}">
 </head>
