--- a/_includes/sections/footer.html
+++ b/_includes/sections/footer.html
@@ -2,6 +2,12 @@
   <div class="w-100 w-50-l">
     <p class="f3 f4-l lh-copy">{{ site.footer }}</p>
     <p class="f6 f5-l lh-copy">Data and privacy policies are in our handbook: <a href="https://handbook.hypha.coop/data.html" target="_blank" class="accent link underline-hover" rel="noopener">How We Use Data</a> and <a href="https://handbook.hypha.coop/working-open.html" target="_blank" class="accent link underline-hover" rel="noopener">Working Open</a>.</p>
+    <p class="f6 f5-l lh-copy">
+      This site is published using <a href="https://distributed.press/" target="_blank" class="accent link underline-hover" rel="noopener">Distributed Press</a>.
+      You can <a href="https://github.com/hyphacoop/api.distributed.press" target="_blank" class="accent link underline-hover" rel="noopener">use it to publish</a> on the p2p and distributed web too.
+      Distributed Web:
+      <a href="https://ipfs.distributed.press/ipns/hypha.coop{{ page.url }}">ipns://hypha.coop</a>
+    </p>
     <p class="f6 f5-l lh-copy">This website content is licensed under a <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank" class="accent link underline-hover" rel="noopener">Creative Commons Attribution-ShareAlike 4.0 International</a> license.</p>
   </div>
   <div class="w-100 w-50-l">
