--- a/_includes/sections/header.html
+++ b/_includes/sections/header.html
@@ -1,7 +1,15 @@
-<div class="flex">
-  <h1 class="worksans f4 f3-ns ttu ma0 lh-solid accent">Hypha</h1><h2 class="ml2 gray worksans f4 f3-ns normal ma0">Worker Co-operative</h2>
+<div class="flex worksans">
+  <div class="w-100">
+    <a href="{{ "/" | relative_url }}" class="flex no-underline"><h1 class="f5 f3-ns ttu ma0 accent">Hypha</h1><h2 class="ml2 gray f5 f3-ns normal ma0">Worker Co-operative</h2></a>
+  </div>
+  <nav id="menu" aria-label="Menu" class="dn flex-l flex-column flex-row-l fixed static-l bg-white w-75 items-end ph3 ph0-l right-0 top-0 bottom-0 tl-l pt4 pt0-l z-max">
+    {%- include sections/navigation.html -%}
+  </nav>
+  <a href="#" class="dn bg-accent fixed top-0 left-0 bottom-0 w-25 backdrop o-60 z-max" tabindex="-1" hidden></a>
 </div>
-<div class="dn db-l">
+<div class="dn flex-l">
   <p class="gray ma0 dib mr2 b">Email</p>
   <a class="accent link underline-hover" href="mailto:{{ site.email-hidden }}">{{ site.email }}</a>
 </div>
+
+<a href="#menu" aria-label="Open menu" class="dn-l f5 f3-ns link underline-hover accent worksans">Menu</a>
