--- a/_sass/_hypha.scss
+++ b/_sass/_hypha.scss
@@ -40,10 +40,41 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-// Addiitonal viewport width helpers
+// Additional viewport width helpers
 
 .vw-70-l {
   @media screen and (min-width: 60em) {
     width: 70vw;
   }
+}
+
+// Wrapper links color helper
+
+.links-accent a {
+  color: $accent-color;
+}
+
+.links-underline-hover a:hover {
+  text-decoration: none;
+}
+
+// Menu interaction
+
+#menu:target {
+  display: flex;
+}
+
+#menu:target + .backdrop {
+  display: flex;
+  @media screen and (min-width: 60em) {
+    display: none;
+  }
+}
+
+.scaling-2 {
+  background-image: url(/assets/images/scaling-2.png);
+}
+
+.scaling-3 {
+  background-image: url(/assets/images/scaling-3.png);
 }
