change mark styling to hypha colour

--- a/_sass/_hypha.scss
+++ b/_sass/_hypha.scss
@@ -22,6 +22,10 @@
   color: $accent-color;
 }
 
+mark {
+  background-color: $secondary-accent-color;
+}
+
 // Hypha brand font classes
 
 .worksans {
