--- a/_includes/sections/footer.html
+++ b/_includes/sections/footer.html
@@ -6,7 +6,7 @@
       This site is published using <a href="https://distributed.press/" target="_blank" class="accent link underline-hover" rel="noopener">Distributed Press</a>.
       You can <a href="https://github.com/hyphacoop/api.distributed.press" target="_blank" class="accent link underline-hover" rel="noopener">use it to publish</a> on the p2p and distributed web too.
       Distributed Web:
-      <a href="https://ipfs.distributed.press/ipns/hypha.coop{{ page.url }}" data-proofer-ignore>ipns://hypha.coop</a>
+      <a href="https://ipfs.distributed.press/ipns/hypha.coop{{ page.url }}" class="accent link underline-hover" data-proofer-ignore>ipns://hypha.coop</a>
     </p>
     <p class="f6 f5-l lh-copy">This website content is licensed under a <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank" class="accent link underline-hover" rel="noopener">Creative Commons Attribution-ShareAlike 4.0 International</a> license.</p>
   </div>
