fix url in og:url

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
   <meta name="description" content="{{ meta_description }}">
   <meta property="og:description" content="{{ meta_description }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}">
-  <meta property="og:url" content="{{ site.url }}">
+  <meta property="og:url" content="{{ page.url | prepend: site.url }}">
   <meta property="og:site_name" content="{{ meta_title | escape }}">
   <meta property="og:image" content="{{ meta_image | relative_url }}">
   <meta name="twitter:title" content="{{ meta_section | escape }}{{ meta_title | escape }}">
