web copy updated - all sections
about, our values, what we do, who we are, work with us

--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -1,7 +1,7 @@
 <div class="flex-l items-center mv2">
   <div class="w-100-l">
     <h3 class="measure-wide f2 f1-m f-subheadline-l measure-narrow lh-solid accent normal worksans">
-      We help organizations and communities redesign their relationships with digital technology.
+      Hypha collaborates with communities to build better relationships with technology.
     </h3>
   </div>
 </div>
