--- a/_includes/sections/who-we-are.html
+++ b/_includes/sections/who-we-are.html
@@ -4,7 +4,8 @@
     <h2 class="f1 f-subheadline-l worksans accent mb1-l mt0-l">Who we are</h2>
     
     <h3 class="mb0 w-100 accent normal f3 f2-l lh-solid relative w5 bg-white z-1 vw-70-l">
-      We advise on sustainable practices, build capacity within organizations, and develop custom technologies to empower friends and neighbours–in the Great Lakes region and our virtual neighbourhoods.
+     A team of technologists, designers, and community organizers who value working with mission-oriented partners. Together, we have years of experience building open source technologies and sustainable communities.
+
     </h3>
 
     <p class="measure-wide f4 f3-l lh-copy dark-gray bg-white">
