--- a/_includes/sections/our-values.html
+++ b/_includes/sections/our-values.html
@@ -2,15 +2,16 @@
   <div class="w-50-l bg-accent white pa3 pa4-l">
     <h2 class="f1 f-subheadline-l worksans mb1 mt0">Our values</h2>
 
-    <h3 class="measure-wide mb0 white normal f3 f2-l lh-solid">Together, we have years of experience building open source technologies and sustainable communities.</h3>
+    <h3 class="measure-wide mb0 white normal f3 f2-l lh-solid">Curiosity · Intersectionality · Honesty · <br> Self-Agency · Solidarity
+</h3>
 
-    <p class="measure-wide f4 f3-l lh-copy white">Our core values reflect our understanding of what it means to cultivate respectful, resilient, and democratic technology ecologies.</p>
+    <p class="measure-wide f4 f3-l lh-copy white">Our core values reflect our approach in cultivating respectful and democratic technology ecologies. <br><br> We bring this ethos to every project we undertake.</p>
   </div>
 
   <div class="w-50-l pa3 pa4-l">
     <div class="measure-wide">
       <h5 class="f4 mb0 mt2">Build change that lasts</h5>
-      <p class="lh-copy">Disruptive growth has its costs. We believe that the culture of “move fast and break things” is untenable. Instead, we seek change that strengthens our communities and nurtures our planet. We work thoughtfully and with care toward the futures we imagine.</p>
+      <p class="lh-copy">Disruptive growth has its costs. We seek change that strengthens our communities and nurtures our planet. We work thoughtfully and with care toward the futures we imagine..</p>
     </div>
 
     <div class="measure-wide">
